--- a/package.json
+++ b/package.json
@@ -24,15 +24,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.2.3",
     "@babel/runtime": "^7.2.0",
-    "babel-loader": "^8.0.5",
+    "babel-plugin-module-resolver": "^3.2.0",
     "babelify": "^10.0.0",
     "browserify": "^16.2.3",
-    "import-http": "^0.3.0",
-    "webpack": "^4.29.1",
-    "webpack-cli": "^3.2.3"
+    "tinyify": "^2.5.0"
   }
 }
