--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "@yerkopalma/ui",
-  "description": "> Personal collection of ui components",
+  "description": "Personal collection of ui components",
   "version": "1.2.0",
-  "main": "index.js",
+  "files": [
+    "index.js",
+    "bundle.js"
+    "components",
+    "lib"
+  ],
+  "main": "bundle.js",
+  "module": "index.js"
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "browserify index.js -o bundle.js -g [ babelify --presets [ @babel/preset-env ] --plugins [ @babel/transform-runtime ] ]"
+    "build": "node scripts/build.js"
   },
   "repository": {
     "type": "git",
