--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "version": "1.2.0",
   "files": [
     "index.js",
-    "bundle.js"
+    "bundle.js",
     "components",
     "lib"
   ],
   "main": "bundle.js",
-  "module": "index.js"
+  "module": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node scripts/build.js"
@@ -18,9 +18,12 @@
     "type": "git",
     "url": "git+https://github.com/YerkoPalma/ui.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "ui",
+    "components"
+  ],
+  "author": "Yerko Palma",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/YerkoPalma/ui/issues"
   },
