--- a/package.json
+++ b/package.json
@@ -3,16 +3,15 @@
   "description": "Personal collection of ui components",
   "version": "1.4.0",
   "files": [
-    "index.js",
-    "bundle.js",
-    "components",
-    "lib"
+    "src",
+    "dist"
   ],
-  "main": "bundle.js",
-  "module": "index.js",
+  "main": "dist/index.js",
+  "module": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node scripts/build.js"
+    "build": "node scripts/build.js",
+    "publish": "node scripts/publish.js"
   },
   "repository": {
     "type": "git",
